# UAVBiophysicalExtraction

./: LICENSE  README.md  pyproject.toml  requirements.txt  uavBiophysicalExtraction.yml
src/UAVBiophysicalExtraction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/UAV_biophysical_extraction/: __init__.py  extraction.py
src/UAV_biophysical_extraction/config/: grid_params.py  mask_params.py  zonalstats_params.py
src/UAV_biophysical_extraction/processing/: grid_processing.py  mask_processing.py  zonalstats_processing.py
src/UAV_biophysical_extraction/utils/: thresholds.py  vegetation_indices.py
